--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
             <a
               href="images/folio/hydro.jpg"
               class="entry__link glightbox"
-              data-glightbox="title: UnderWater dam inspection robot: .entry__desc-08"
+              data-glightbox="title: UnderWater dam inspection robot; description: .entry__desc-08"
             >
               <div class="entry__thumb">
                 <img
