--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                 This analysis is about the sales of the organisation with
                 respect to different factors like categories, geography,
                 employees and shipping details.
-                <a href="https://www.behance.net/">Project Link</a>.
+                <a href="dashboards\sales and shipping.xlsx" download>Download</a>.
               </p>
             </div>
           </div>
@@ -380,7 +380,7 @@
                 This analysis dives deep into the performance of the employees
                 in a firm and net revenue brought in by each one of them through
                 deals.
-                <a href="https://www.behance.net/">Project Link</a>.
+                <a href="dashboards\HR dashboard.xlsx" download>Download</a>.
               </p>
             </div>
           </div>
@@ -413,7 +413,7 @@
                 This is an analysis about the average waiting time for patients
                 in an hospital. It seeks to provide the in depth analysis of
                 waitlist for each department in the hospital.
-                <a href="https://www.behance.net/">Project Link</a>.
+                <a href="dashboards\Hospital.pbix" download>Download</a>.
               </p>
             </div>
           </div>
@@ -446,7 +446,7 @@
                 This is a complete analysis of the sales of each and every
                 product category in amazon and the performance and net revenue
                 of said product categories.
-                <a href="https://www.behance.net/">Project Link</a>.
+                <a href="dashboards\amazon.pbix" download>Download</a>.
               </p>
             </div>
           </div>
@@ -478,7 +478,7 @@
               <p>
                 This is a high level analysis of the trends in the popularity
                 and hosting of tv shows and and movies on netflix over time.
-                <a href="https://www.behance.net/">Project Link</a>.
+                <a href="dashboards\netflix.pbix">Download</a>.
               </p>
             </div>
           </div>
@@ -513,7 +513,7 @@
                 EyeTalk is a communication aid software which helps paralyzed
                 patients who cant even speak, to have natural conversation with
                 others using iris tracking and gen AI.
-                <a href="https://www.behance.net/">Project Link</a>.
+                <a href="https://www.behance.net/">Download</a>.
               </p>
             </div>
           </div>
