--- a/index.html
+++ b/index.html
@@ -350,7 +350,9 @@
                 This analysis is about the sales of the organisation with
                 respect to different factors like categories, geography,
                 employees and shipping details.
-                <a href="dashboards\sales and shipping.xlsx" download>Download</a>.
+                <a href="dashboards\sales and shipping.xlsx" download
+                  >Download</a
+                >.
               </p>
             </div>
           </div>
@@ -513,7 +515,10 @@
                 EyeTalk is a communication aid software which helps paralyzed
                 patients who cant even speak, to have natural conversation with
                 others using iris tracking and gen AI.
-                <a href="https://www.behance.net/">Download</a>.
+                <a
+                  href="https://github.com/Vishaal-sathya/EyeTalk-Assistive-Technology"
+                  >Project Link</a
+                >.
               </p>
             </div>
           </div>
@@ -544,7 +549,6 @@
                 of detecting defects like abrations, cracks and rust on the
                 concrete and metal submerged surfaces of a dam. It is also
                 capable of localized repair of the cracks and rust.
-                <a href="https://www.behance.net/">Project Link</a>.
               </p>
             </div>
           </div>
