--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
 
             <div class="glightbox-desc entry__desc-08">
               <p>
-                HydroBision is an autonomous underwater drone which is capable
+                HydroVision is an autonomous underwater drone which is capable
                 of detecting defects like abrations, cracks and rust on the
                 concrete and metal submerged surfaces of a dam. It is also
                 capable of localized repair of the cracks and rust.
