--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
             <div class="glightbox-desc entry__desc-04">
               <p>
                 This is an analysis about the average waiting time for patients
-                in an hospital. It seeks to provide the in depth analysis of
+                in a hospital. It seeks to provide in depth analysis of
                 waitlist for each department in the hospital.
                 <a href="dashboards\Hospital.pbix" download>Download</a>.
               </p>
@@ -425,7 +425,7 @@
             <a
               href="images/folio/amazon.png"
               class="entry__link glightbox"
-              data-glightbox="title: Which product is the best and which one performs below average?; description: .entry__desc-05"
+              data-glightbox="title: Which category is the best and which one performs below average?; description: .entry__desc-05"
             >
               <div class="entry__thumb">
                 <img
@@ -490,7 +490,7 @@
             <a
               href="images/folio/eyetalk.png"
               class="entry__link glightbox"
-              data-glightbox="title: Communcation aid for paralysis patients; description: .entry__desc-07"
+              data-glightbox="title: Communcation aid for paralyzed patients; description: .entry__desc-07"
             >
               <div class="entry__thumb">
                 <img
@@ -513,7 +513,7 @@
             <div class="glightbox-desc entry__desc-07">
               <p>
                 EyeTalk is a communication aid software which helps paralyzed
-                patients who cant even speak, to have natural conversation with
+                patients who can't even speak, to have natural conversation with
                 others using iris tracking and gen AI.
                 <a
                   href="https://github.com/Vishaal-sathya/EyeTalk-Assistive-Technology"
