--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
                     </div>
                     <div class="entry__info">
                       <h4 class="entry__title">HackFest 2024</h4>
-                      <div class="entry__cat">coimbatore</div>
+                      <div class="entry__cat">Coimbatore</div>
                     </div>
                   </a>
 
