--- a/index.html
+++ b/index.html
@@ -413,8 +413,8 @@
             <div class="glightbox-desc entry__desc-04">
               <p>
                 This is an analysis about the average waiting time for patients
-                in a hospital. It seeks to provide in depth analysis of
-                waitlist for each department in the hospital.
+                in a hospital. It seeks to provide in depth analysis of waitlist
+                for each department in the hospital.
                 <a href="dashboards\Hospital.pbix" download>Download</a>.
               </p>
             </div>
@@ -569,7 +569,7 @@
 
             <p class="attention-getter">
               I'm Vishaal, a student based in India passionate about weaving
-              words out of data. I look at data visialization as a key to
+              words out of data. I look at data visualization as a key to
               unlocking the potential of growth and I use machine learning as a
               tool to strive towards that growth. I pride myself on my curiosity
               and my unwavering drive to push my self beyond my limits.
@@ -630,7 +630,7 @@
                   <a
                     href="images\about\sih.jpg"
                     class="entry__link glightbox"
-                    data-glightbox="title:HackFest 2024 - 1.5 Lakhs Cash Prize; description: .entry__desc-10"
+                    data-glightbox="title:Smart India Hackathon 2023; description: .entry__desc-10"
                   >
                     <div class="entry__thumb">
                       <img
@@ -669,7 +669,7 @@
                   <a
                     href="images\about\startup.jpg"
                     class="entry__link glightbox"
-                    data-glightbox="title:HackFest 2024 - 1.5 Lakhs Cash Prize; description: .entry__desc-11"
+                    data-glightbox="title:Startup Mahakumb 2024; description: .entry__desc-11"
                   >
                     <div class="entry__thumb">
                       <img
