--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
   <head>
-    <!-- Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-G36DXZTE56"
+    ></script>
     <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-MZX3RWMT");
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-G36DXZTE56");
     </script>
-    <!-- End Google Tag Manager -->
 
     <!--- basic page needs
     ================================================== -->
@@ -51,7 +51,7 @@
   </head>
 
   <body id="top">
-    <!-- Google Tag Manager (noscript) -->
+    <!-- Google Tag Manager (noscript) --
     <noscript
       ><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-MZX3RWMT"
@@ -60,7 +60,7 @@
         style="display: none; visibility: hidden"
       ></iframe
     ></noscript>
-    <!-- End Google Tag Manager (noscript) -->
+    !-- End Google Tag Manager (noscript) -->
     <!-- preloader
     ================================================== -->
     <div id="preloader">
